# mpl-brandpacker

./: .gitignore  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: lint.yml  publish.yml  test.yml
docs/: fn-forms.md  index.md
examples/: capture_demo.py  corpframe_demo.py  demo.py  gallery_corporate_demo.py  gallery_demo.py  gallery_multiplot_demo.py  interact.py  interact_demo.py  ipywidgets_interact.ipynb  page_explicit.py  page_implicit.py  page_jupyter.ipynb  showcase.py
examples/dash/: mpl_export.py
examples/gallery_multiplot/: gallery.json
examples/gallery_multiplot/inflation/data/: data_20260101.csv
examples/gallery_multiplot/inflation/scripts/: script_20260101_v1.py  script_20260325_v1.py  script_20260325_v2.py  script_20260325_v3.py  script_20260325_v4.py  script_20260325_v5.py  script_20260325_v6.py
examples/gallery_multiplot/revenue_chart/data/: data_20260101.csv
examples/gallery_multiplot/revenue_chart/scripts/: script_20260101_v1.py  script_20260325_v1.py
examples/my_brand_example/: __init__.py  axes.py  figure.py  pyplot.py  sizes.py
r-packages/corpframe/: DESCRIPTION  NAMESPACE
r-packages/corpframe/R/: figsizes.R  frame_png.R  frame_python.R  gg_corporate.R  ggplot.R  python.R  shiny.R  shiny_export.R
r-packages/corpframe/examples/: corporate_frame_demo.R  gg_demo.R  shiny_demo.R
r-packages/corpframe/inst/python/: corporate_frame.py
r-packages/corpframe/tests/: testthat.R
r-packages/corpframe/tests/testthat/: test-frame_python.R  test-gg_corporate.R  test-shiny_export.R
r-packages/shinycorpframe/: DESCRIPTION  NAMESPACE
r-packages/shinycorpframe/R/: capture_corporate.R  frame_python.R
r-packages/shinycorpframe/examples/: corporate_demo.R
r-packages/shinycorpframe/inst/python/: corporate_frame.py
src/dash_fn_form/: __init__.py  _config_builder.py
src/dash_fn_interact/: _forms.py  page.py
src/dash_fn_tools/: __init__.py  _config_builder.py
src/mpl_brandpacker/: __init__.py  _config.py  axes.py  colors.py  create_brand.py  figsizes.py  figure.py  pandas.py  patcher.py  pyplot.py  sizes.py  style.py  utils.py
src/mpl_brandpacker/_template/src/my_brand/: figure.py  header.py  pyplot.py
src/s5ndt/: __init__.py  _ids.py  config_builder.py  fig_export.py  mpl_export.py  wizard.py
template/: .gitignore  README.md  pyproject.toml
template/examples/: demo.py
template/src/my_brand/: __init__.py  axes.py  figure.py  header.py  legend.py  pyplot.py  pyplot.pyi
tests/: conftest.py  test_smoke.py
tests/corpframe/: test_corporate_frame.py
tests/dash_capture/: test_strategies.py
tests/dash_fn_forms/: test_coerce_validate.py  test_dbc_fields.py  test_declarative_form.py  test_dmc_fields.py  test_field_components.py  test_fn_interact.py  test_forms.py  test_renderers.py  test_spec.py  test_utils.py
tests/dash_fn_interact/: test_fn_interact.py  test_renderers.py
tests/dash_interact/: test_interact.py  test_page.py
tests/gallery_viewer/: test_backend.py  test_config.py  test_params.py
tests/integration/: conftest.py  test_capture_integration.py  test_fn_panel_integration.py  test_form_callbacks_integration.py
tests/mpl_brandpacker/: test_axes.py  test_colors.py  test_configure.py  test_figsizes.py  test_figure.py  test_patcher.py  test_sizes.py  test_utils.py
