[project]
name = "s5ndt"
dynamic = ["version"]
description = "s5n dash tools — Plotly Dash utilities"
keywords = ["plotly", "dash", "visualization", "dashboard"]
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.9"
dependencies = [
    "dash",
    "plotly",
    "matplotlib",
    "kaleido",
]

[project.urls]
Homepage = "https://github.com/saemeon/s5ndt"
Repository = "https://github.com/saemeon/s5ndt"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "mike",
]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/s5ndt/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"

[tool.setuptools.dynamic]
version = { attr = "s5ndt._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
s5ndt = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/s5ndt --cov-report=term-missing"

[tool.ty.environment]
python = ".venv"

[tool.ty.src]
include = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E203", "UP035"]
