[project]
name = "mpl-brandpacker"
dynamic = ["version"]
description = "Generic matplotlib brand/corporate-design framework — patcher, pyplot hooks, style registry, and pandas hook for building company-specific plot packages"
keywords = ["matplotlib", "corporate", "design", "brand", "framework"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3",
    "numpy>=1.22.4",
    "pandas>=1.5.3",
]

[project.urls]
Homepage = "https://github.com/saemeon/mpl-brandpacker"
Repository = "https://github.com/saemeon/mpl-brandpacker"

[dependency-groups]
test = ["pytest", "pytest-cov"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/mpl_brandpacker/_version.py"

[tool.setuptools.dynamic]
version = { attr = "mpl_brandpacker._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mpl_brandpacker = ["py.typed", "_template/**/*", "_template/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/mpl_brandpacker --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501"]
