[project]
name = "my-brand"
version = "0.1.0"
description = "Branded matplotlib package — replace with your brand description"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
dependencies = [
    "mpl-brandpacker",
    "matplotlib>=3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
my_brand = ["*.mplstyle", "data/fonts/*.ttf", "data/fonts/**/*.ttf"]
